--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,18 +9,18 @@
   weight = 10
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
+  name = "Journal papers"
+  url = "#journal"
   weight = 20
 
 [[main]]
-  name = "Projects"
-  url = "#projects"
+  name = "Conference papers"
+  url = "#conference"
   weight = 30
 
 [[main]]
-  name = "Publications"
-  url = "#featured"
+  name = "Teaching"
+  url = "#teaching"
   weight = 40
 
 [[main]]
